@@ -69,6 +69,7 @@ my @functions = qw(
                      addreal subreal mulreal divreal
                      logreal expreal powreal rootreal agmreal
                      gcd lcm kronecker valuation binomial gcdext hammingweight
+                     is_qr
                      invmod sqrtmod addmod submod mulmod divmod powmod
                      muladdmod mulsubmod
                      vecsum vecprod
